[gd_scene load_steps=9 format=2]

[ext_resource path="res://graphics/Schreibtisch.png" type="Texture" id=1]
[ext_resource path="res://Level/Button_Computer.gd" type="Script" id=2]
[ext_resource path="res://Level/Desk.gd" type="Script" id=3]
[ext_resource path="res://fonts/AYearWithoutRain.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 4 )

[node name="Desk" type="Node2D"]
script = ExtResource( 3 )

[node name="Desk_Image" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="ComputerLabel" type="Label" parent="Desk_Image"]
margin_left = 1221.0
margin_top = 282.0
margin_right = 1437.0
margin_bottom = 372.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "use computer"

[node name="Button_Computer" type="Area2D" parent="Desk_Image"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Desk_Image/Button_Computer"]
position = Vector2( 1010, 206 )
scale = Vector2( 32.3482, 9.75728 )
polygon = PoolVector2Array( -9.21226, -8.71144, -9.15043, 3.2796, -8.56307, 3.38209, -5.81176, 3.38209, -5.31714, 9.94129, 6.08998, 9.73632, 6.36821, 4.0995, 6.43003, 3.17711, 9.70688, 3.17711, 9.64505, -10.0438, -9.0886, -9.83881, -8.99586, -9.12139 )

[node name="Button_Mug" type="Area2D" parent="Desk_Image"]

[node name="MugLabel" type="Label" parent="Desk_Image/Button_Mug"]
margin_left = 1596.0
margin_top = 511.0
margin_right = 1797.0
margin_bottom = 572.0
custom_fonts/font = SubResource( 2 )
text = "favorite mug"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Desk_Image/Button_Mug"]
position = Vector2( 1629, 448 )
scale = Vector2( -5.99881, 7.2462 )
polygon = PoolVector2Array( 4.6676, 4.69211, 6.33459, 4.00209, 8.1683, 1.24202, 8.1683, -2.62207, 7.0014, -6.07215, 5.00101, -7.72819, 4.3342, -8.0042, 3.5007, -8.41821, -7.0014, -7.59019, -7.66818, -7.17618, -8.00159, -4.83012, -8.16827, -3.03608, -8.33499, -1.24203, -7.8349, 2.89806, -7.33478, 4.5541, -6.50128, 5.10612, -5.8345, 5.24412, -5.5011, 5.65813, -3.1673, 5.65813, -2.0004, 6.34814, -0.666809, 8.4182, 0.166718, 8.83221, 1.83371, 9.10822, 4.00079, 8.5562, 5.33441, 7.03816, 5.33441, 6.07214 )

[node name="Button_Applicationpapers" type="Area2D" parent="Desk_Image"]

[node name="PapersLabel" type="Label" parent="Desk_Image/Button_Applicationpapers"]
margin_left = 120.0
margin_top = 228.0
margin_right = 623.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 3 )
text = "still need to fill out that application"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Desk_Image/Button_Applicationpapers"]
position = Vector2( 366, 593 )
scale = Vector2( 26.12, 31.0046 )
polygon = PoolVector2Array( -9.68606, 1.90735e-06, -1.45482, 1.90735e-06, -1.45482, 0.258028, -7.42726, 0.290281, -7.3124, 9.99852, 1.30169, 10.0308, 1.07198, 9.51472, 8.92037, 9.3857, 8.8438, -0.354784, 8.61409, -0.548304, 7.04441, -0.580557, 6.96784, -6.54741, 6.62328, -6.64417, -1.30168, -6.61192, -1.30168, -9.70823, -1.56968, -9.96626, -9.68606, -9.83725, -9.91577, -9.70823 )

[node name="Button_diary" type="Area2D" parent="Desk_Image"]

[node name="DiaryLabel" type="Label" parent="Desk_Image/Button_diary"]
margin_left = 1281.0
margin_top = 675.0
margin_right = 1480.0
margin_bottom = 759.0
custom_fonts/font = SubResource( 4 )
text = " diary"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Desk_Image/Button_diary"]
position = Vector2( 1017, 825.956 )
scale = Vector2( 27.65, 14.3792 )
polygon = PoolVector2Array( -8.64376, -9.34915, -8.78843, -9.14139, -8.96926, -2.07759, -9.0416, 2.77011, -8.96926, 5.81724, -8.9331, 9.34914, -8.78843, 9.83391, -8.42677, 9.90316, 8.64377, 9.90316, 9.1501, 9.34914, 9.33093, 7.68707, 9.3671, 5.74799, 9.3671, 0.484768, 9.22243, -8.65662, 9.00543, -9.69541, 6.29295, -9.62616, -0.759491, -9.69541 )

[connection signal="input_event" from="Desk_Image/Button_Computer" to="Desk_Image/Button_Computer" method="_on_Button_Computer_input_event"]
[connection signal="mouse_entered" from="Desk_Image/Button_Computer" to="." method="_on_Button_Computer_mouse_entered"]
[connection signal="mouse_exited" from="Desk_Image/Button_Computer" to="." method="_on_Button_Computer_mouse_exited"]
[connection signal="mouse_entered" from="Desk_Image/Button_Mug" to="." method="_on_Button_Mug_mouse_entered"]
[connection signal="mouse_exited" from="Desk_Image/Button_Mug" to="." method="_on_Button_Mug_mouse_exited"]
[connection signal="mouse_entered" from="Desk_Image/Button_Applicationpapers" to="." method="_on_Button_Applicationpapers_mouse_entered"]
[connection signal="mouse_exited" from="Desk_Image/Button_Applicationpapers" to="." method="_on_Button_Applicationpapers_mouse_exited"]
[connection signal="mouse_entered" from="Desk_Image/Button_diary" to="." method="_on_Button_diary_mouse_entered"]
[connection signal="mouse_exited" from="Desk_Image/Button_diary" to="." method="_on_Button_diary_mouse_exited"]
